# issue-tracking

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE_NOTES.md  doc
.sit/cli/: mr-send-upstream
.sit/items/05b17931-4c12-4381-9892-7438fa1cbae0/: AJJCC2JRVSFBVK634DC5M32MQ642RWVT  V3SOVKZLY3JOY2IWC3KBB5F7HDL3MTJG
.sit/items/076c63f4-b06a-4ade-8ab7-0e4c4111c953/: DMWRQFGSGRLKKFMTSMP23SX5YIBUHXHD  GGLG3YHGKFLEIK777C4LXFGTOFP4222B  N46PBO4UMHABI4FD6TARCSVLGVSJ2J3H  RSBT2UHJAGSRVNMJ66FGHAC25E44FNQT
.sit/items/0e569da8-49d5-45b7-90a8-6958cf58b74b/: FRSVLUVC5E54LRESIUN3MKUWJUQ75A7U  MYTZPE4DTANJ5JLDU6JKFF34XOUUWKOW  R5JEGVIHVNOIJIB2W7IVDCELFIRXCDQT
.sit/items/0ee82aac-b323-4a3c-903b-8c1ac4a4e0e6/: NYKM6EJ5NVR4FLLXWLFPHAERGOVUQDTQ  RBOIWGMMSSRXSPFWIMG46JTZBBRBQOIV
.sit/items/16b55229-b451-4f21-8296-03d31adc9b6c/: 2WKPT3FNCAXGR3V6GXOL3Q4O7SABZNFM  6CPOF3LN7CBHCJOPBAEWF63O54B5M6ZF  GUTKG6MTQ6ZIVWVXILODWTP36VC4CNBZ
.sit/items/1fca1d34-7e0f-4a37-adeb-7784961e6135/: EOQ4KFKOXNNENPPX6NMN2OY57KEIT4NK  HSZNY6P5SFRZNNN6G5SINBTDYC7TXQI3  ILDBYTJZI3KFY4NDXOLLLOBNMRWHZSJN  QR3KVYYHHTZUFJGCX265OE5RDLAK4TB2
cli/: sit-issue  sit-issue.bat  sit-issue.ps1  sit-issue.yaml  sit-mr  sit-mr-compare  sit-mr-merge
reducers/: DetailsChanges.js
scripts/: prepare-merge-request
src/: files.rs  issues.rs  main.rs  timeline.rs
templates/: pull_requests.graphql
tools/sit-issue-import/: .gitignore  Cargo.toml  PULL_REQUEST_TEMPLATE.md
web/: index.html
web/documentation/: getting_started.md  screenshots.js
web/src/: spinner.html  styles.html
(+458 files in other folders)
