[package]
name = "sit-import"
version = "0.1.0"
authors = ["Yurii Rashkovskii <mek@yrashk.com>"]

[dependencies]
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
config = { version = "0.8", features = ["json"] }
xdg = "2.1"
clap = "2.29"
console = "0.6"
sit-core = "0.1"
askama = "0.5"
pbr = "1.0"
regex = "0.2"

[build-dependencies]
askama = "0.5"
